<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                app:bar_leftText="@string/setting_language_switchover"
                app:bar_rightDrawable="@drawable/arrows_right_ic"
                tools:bar_rightTextHint="@string/setting_language_simple" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_blacklist_management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:bar_leftText="@string/setting_blacklist_management" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:bar_leftText="@string/setting_update">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_setting_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/setting_update_bg"
                    android:paddingHorizontal="6dp"
                    android:paddingBottom="3dp"
                    android:text="new"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="gone" />

            </com.hjq.widget.layout.SettingBar>

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                app:bar_leftText="@string/setting_agreement"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_me_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_me_pay"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_about"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_time_float_window"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:minHeight="48dp"
                app:bar_leftText="@string/setting_time_float_window">

                <com.hjq.widget.view.SwitchButton
                    android:id="@+id/sb_setting_time_float_window_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginHorizontal="15dp" />

            </com.hjq.widget.layout.SettingBar>

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_cache"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:minHeight="48dp"
                app:bar_leftText="@string/setting_exit"
                app:bar_leftTextColor="@color/red" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_current_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:layout_marginVertical="@dimen/dp_20"
                android:text="@string/current_version"
                android:textColor="#8B919E"
                android:textSize="@dimen/sp_12" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>