<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PasswordResetActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_reset_title" />

    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_reset_old_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/safe_ic"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_phone_old_password_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />

    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_reset_password1"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/safe_ic"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_phone_hint1"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />

    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_reset_password2"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/safe_ic"
        android:drawablePadding="15dp"
        android:hint="@string/password_reset_phone_hint2"
        android:maxLength="20"
        android:paddingHorizontal="20dp"
        android:paddingVertical="18dp"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/et_password_reset_verify_code"
            style="@style/EditTextStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/safe_ic"
            android:drawablePadding="15dp"
            android:hint="@string/common_verify_code_input_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="@integer/verify_code_length"
            android:paddingHorizontal="20dp"
            android:paddingVertical="18dp"
            android:singleLine="true" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_password_reset_verify_code"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/refresh_ic" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_reset_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:text="@string/common_step_complete" />

</LinearLayout>