<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PasswordForgetActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_forget_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/et_password_forget_verify_code"
            style="@style/EditTextStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/safe_ic"
            android:drawablePadding="@dimen/dp_15"
            android:hint="@string/common_verify_code_input_hint"
            android:inputType="text"
            android:maxLength="@integer/verify_code_length"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_18"
            android:singleLine="true" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_password_forget_verify_code"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/refresh_ic" />

    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_20" />

    <com.hjq.widget.view.RegexEditText
        android:id="@+id/et_password_forget_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/phone_ic"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/common_phone_input_hint"
        android:inputType="number"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingVertical="@dimen/dp_18"
        android:singleLine="true"
        app:regexType="mobile" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_forget_code"
            style="@style/EditTextStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/safe_ic"
            android:drawablePadding="@dimen/dp_15"
            android:hint="@string/common_code_input_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="@integer/sms_code_length"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_18"
            android:singleLine="true" />

        <com.hjq.widget.view.CountdownView
            android:id="@+id/cv_password_forget_countdown"
            style="@style/CountdownViewStyle" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_forget_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_30"
        android:text="@string/common_step_next" />

</LinearLayout>